--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="kepek/gi.jpg" class="d-block w-100" alt="...">
+                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
                         <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/egyiptom2-scaled.jpg" class="d-block w-100" alt="...">
+                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -46,7 +46,7 @@
                   </div> 
             </div>
             <div class="col-lg-6">
-                
+                <p>Egyiptom (arabul: مصر, IPA: [misˤɾ], Miszr; egyiptomi arab ejtéssel: [ˈmɑsˤɾ], Maszr), hivatalosan Egyiptomi Arab Köztársaság (arabul: جمهورية مصر العربية, IPA: [Dzsumhúrijat Miszr al-Arabijah]) transzkontinentális ország, területének nagyobbik része Észak-Afrikában, kisebb része Délnyugat-Ázsiában található. A két földrészt az ország tulajdonában álló Szuezi-csatorna választja el egymástól.</p>
             </div>
         </div>
     </div>
