--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
                 <p>Egyiptom (arabul: مصر, IPA: [misˤɾ], Miszr; egyiptomi arab ejtéssel: [ˈmɑsˤɾ], Maszr), hivatalosan Egyiptomi Arab Köztársaság (arabul: جمهورية مصر العربية, IPA: [Dzsumhúrijat Miszr al-Arabijah]) transzkontinentális ország, területének nagyobbik része Észak-Afrikában, kisebb része Délnyugat-Ázsiában található. A két földrészt az ország tulajdonában álló Szuezi-csatorna választja el egymástól.</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <h3>Helyezkedés</h3>
+                <p>Az országot nyugatról Líbia, délről Szudán, északról a Földközi-tenger, északkeletről a Gázai övezet és Izrael, keletről pedig a Vörös-tenger határolja. Fővárosa a középkor óta az arab és az iszlám világ központja, Kairó, mely több mint húszmillió lakosával [4] a világ egyik legnagyobb agglomerációja.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3>Éghajlat</h3>
+                <p>A passzátövezetben fekvő Egyiptomnak zonális sivatagi éghajlata van. Csak a Földközi-tenger partvidékén, illetve a Nílus-delta északi peremén hull (télen) valamennyi csapadék – itt száraz szubtrópusi éghajlat alakult ki.
+                </p>
+            </div>
+            <div class="col-lg-4">
+
+            </div>
+        </div>
     </div>
 </body>
 </html> 
