--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 ">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -26,13 +26,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100" alt="...">
+                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100" alt="...">
+                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100" alt="...">
+                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <h3>Helyezkedés</h3>
-                <p>Az országot nyugatról Líbia, délről Szudán, északról a Földközi-tenger, északkeletről a Gázai övezet és Izrael, keletről pedig a Vörös-tenger határolja. Fővárosa a középkor óta az arab és az iszlám világ központja, Kairó, mely több mint húszmillió lakosával [4] a világ egyik legnagyobb agglomerációja.</p>
+                <p>Az országot nyugatról Líbia, délről Szudán, északról a Földközi-tenger, északkeletről a Gázai övezet és Izrael, keletről pedig a Vörös-tenger határolja. Fővárosa a középkor óta az arab és az iszlám világ központja, Kairó, mely több mint húszmillió lakosával a világ egyik legnagyobb agglomerációja.</p>
             </div>
             <div class="col-lg-4">
                 <h3>Éghajlat</h3>
@@ -60,7 +60,9 @@
                 </p>
             </div>
             <div class="col-lg-4">
-
+                <h3>Gasztronómia</h3>
+                <p>Egyiptomi asszony friss zöldségeket válogat.
+                    A mai egyiptomi konyha is használja a Nílus menti termékeny területen termesztett gabonaféléket, zöldségeket, továbbá meghatározó a szerepe a baromfihúsnak és a gyümölcsöknek. Alapeleme a konyhának az eis baladi nevű kenyér.</p>
             </div>
         </div>
     </div>
