--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
                     A mai egyiptomi konyha is használja a Nílus menti termékeny területen termesztett gabonaféléket, zöldségeket, továbbá meghatározó a szerepe a baromfihúsnak és a gyümölcsöknek. Alapeleme a konyhának az eis baladi nevű kenyér.</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-3">
+                <button>Őskör</button>
+                <button>Ókor</button>
+                <button>Középkor</button>
+                <button>Újkor</button>
+                <button>Jelenkor</button>
+            </div>
+            <div class="col-lg-9">
+
+            </div>
+        </div>
     </div>
 </body>
 </html> 
