--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </div>
         <div class="row">
             <div class="col-lg-3">
-                <button>Őskör</button>
-                <button>Ókor</button>
-                <button>Középkor</button>
-                <button>Újkor</button>
-                <button>Jelenkor</button>
+                <button class="korok-btn">Őskör</button><br>
+                <button class="korok-btn">Ókor</button><br>
+                <button class="korok-btn">Középkor</button><br>
+                <button class="korok-btn">Újkor</button><br>
+                <button class="korok-btn">Jelenkor</button><br>
             </div>
             <div class="col-lg-9">
 
