--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3">
+            <h3>Történelme</h3>
+            <div class="col-lg-4">
                 <button class="korok-btn">Őskör</button><br>
                 <button class="korok-btn">Ókor</button><br>
                 <button class="korok-btn">Középkor</button><br>
                 <button class="korok-btn">Újkor</button><br>
                 <button class="korok-btn">Jelenkor</button><br>
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-8">
 
             </div>
         </div>
