--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <p class="text active" id="text1">Korai dinasztikus időszak (i. e. 3150–2686)
                   Fő cikk: Korai dinasztikus időszak (Egyiptom)
                   A korai dinasztikus időszak hozzávetőlegesen a korai mezopotámiai sumér - akkád civilizáció és az ősi Elam korabeli volt . Az időszámításunk előtti harmadik században élt egyiptomi pap, Manetho a királyok hosszú sorát Menestől saját koráig 30 dinasztiába csoportosította, ez a rendszer ma is használatos. Hivatalos történelmét a "Meni" (vagy görögül Menes) nevű királlyal kezdte, akiről azt hitték, hogy egyesítette Felső- és Alsó-Egyiptom két királyságát .</p>
-                <p class="text" id="text2">...</p>
+                <p class="text" id="text2">Hafré piramisa
+                  A terület viszonylagos elszigeteltsége és a Nílus évenkénti áradásai következtében a Nílus völgyében alakult ki az ókori Egyiptom, az ókor egyik legfejlettebb civilizációja, miután Ménész (Mina) I. e. 3000 körül egyesítette Alsó- és Felső-Egyiptomot. A birodalom mintegy háromezer évig állt fenn; a XXX. dinasztia hatalmát a perzsák döntötték meg I. e. 342-ben, így rövid függetlenedést követően az I. e. 525-ben már meghódított Egyiptom ismét az Óperzsa Birodalom része lett. A folyton lázongó tartományt I. e. 332-ben foglalták el Nagy Sándor csapatai, majd halála után egyik hadvezére, I. Ptolemaiosz vezetésével ismét függetlenedett.</p>
                 <p class="text" id="text3">...</p>
                 <p class="text" id="text4">...</p>
                 <p class="text" id="text5">...</p>
