--- a/kirandulas.html
+++ b/kirandulas.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="kirandulas.css">
     <title>Egyiptom</title>
 </head>
 <body>
@@ -19,6 +20,15 @@
        <div class="row">
         <div class="col-lg-6">
             <h2>Repjegy</h2>
+            <p>
+            <h4 id="indulas">Indulás napja: 2024.08.04</h4>
+            <p>
+            Társaság: <b>WizzAir</b> <br>
+            Indulás <b>Budapestről:</b> 22:30 <br>
+            Érkezés <b>Cairóba:</b> 02:55</p>
+        </p>
+        <img src="kepek/repjegy.png" alt="" class="img-fluid repjegy-kep">
+
         </div>
         <div class="col-lg-6">
             <h2>Szállás</h2>
