--- a/kirandulas.html
+++ b/kirandulas.html
@@ -20,18 +20,40 @@
        <div class="row">
         <div class="col-lg-6">
             <h2>Repjegy</h2>
-            <p>
-            <h4 id="indulas">Indulás napja: 2024.08.04</h4>
-            <p>
-            Társaság: <b>WizzAir</b> <br>
-            Indulás <b>Budapestről:</b> 22:30 <br>
-            Érkezés <b>Cairóba:</b> 02:55</p>
-        </p>
+            <div id="repjegy">
+                <p>
+                <h4 id="indulas">Indulás napja: 2024.08.04</h4>
+                <p>
+                Társaság: <b>WizzAir</b> <br>
+                Indulás <b>Budapestről:</b> 22:30 <br>
+                Érkezés <b>Cairóba:</b> 02:55</p>
+                        </p>
+                        <p>
+                <h4 id="indulas">Érkezés napja: 2024.08.09</h4>
+                <p>
+                Társaság: <b>WizzAir</b> <br>
+                Indulás <b>Cairóból:</b> 03:30 <br>
+                Érkezés <b>Cairóba:</b> 06:00</p>
+                        </p>
+            </div>
         <img src="kepek/repjegy.png" alt="" class="img-fluid repjegy-kep">
 
         </div>
         <div class="col-lg-6">
             <h2>Szállás</h2>
+            <p>
+                <h4 id="indulas">2024.08.04 - 2024.08.05</h4>
+                <p>
+                Szállás neve: Le meridien Cairo Airport <span class="stars">*****</span> <br>
+                Ára: 67.500 Ft <br>(*Reggeli az árban)
+                        </p>
+                        <p>
+                <h4 id="indulas">Érkezés napja: 2024.08.09</h4>
+                <p>
+                Társaság: <b>WizzAir</b> <br>
+                Indulás <b>Cairóból:</b> 03:30 <br>
+                Érkezés <b>Cairóba:</b> 06:00</p>
+                        </p>
         </div>
        </div>
        
