--- a/kirandulas.html
+++ b/kirandulas.html
@@ -42,18 +42,25 @@
         <div class="col-lg-6">
             <h2>Szállás</h2>
             <p>
-                <h4 id="indulas">2024.08.04 - 2024.08.05</h4>
+                <h4 id="indulas">2024.08.04 - 2024.08.05 (Cairó)</h4>
                 <p>
                 Szállás neve: Le meridien Cairo Airport <span class="stars">*****</span> <br>
-                Ára: 67.500 Ft <br>(*Reggeli az árban)
+                Ára: 67.500 Ft <span class="reggeli">(*Reggeli az árban)</span>
                         </p>
                         <p>
-                <h4 id="indulas">Érkezés napja: 2024.08.09</h4>
+                <h4 id="indulas">2024.08.05 - 2024.08.06 (Luxor)</h4>
                 <p>
-                Társaság: <b>WizzAir</b> <br>
-                Indulás <b>Cairóból:</b> 03:30 <br>
-                Érkezés <b>Cairóba:</b> 06:00</p>
+                Szállás neve: Jolie Ville Hotel & Spa Kings Island Luxor<span class="stars">*****</span> <br>
+                Ára: 31.000 Ft <span class="reggeli">(*Reggeli az árban)</span>
                         </p>
+                        <p>
+                <h4 id="indulas">2024.08.06 - 2024.08.07 (Aswan)</h4>
+                <p>
+                Szállás neve: Pyramisa Island Hotel Aswan<span class="stars">*****</span> <br>
+                Ára: 37.000 Ft <span class="reggeli">(*Reggeli az árban)</span>
+                        </p>
+                        <p>
+                
         </div>
        </div>
        
