--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
+                        <img src="kepek/slideshhow1.jpg" class="d-block w-100 slideshow" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
+                        <img src="kepek/slideshow2.jpg" class="d-block w-100 slideshow" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -101,7 +101,7 @@
           <div class="col-12 video">
             <h3>Videó Egyiptom titkairól</h3>
             <iframe width="890" height="500"
-            src="https://www.youtube.com/embed/d98u4k0NDJI">
+            src="https://www.youtube.com/embed/d98u4k0NDJI" class="videocska">
             </iframe>
           </div>
         </div>
