--- a/kirandulas.html
+++ b/kirandulas.html
@@ -44,20 +44,20 @@
             <p>
                 <h4 id="indulas">2024.08.04 - 2024.08.05 (Cairó)</h4>
                 <p>
-                Szállás neve: Le meridien Cairo Airport <span class="stars">*****</span> <br>
-                Ára: 67.500 Ft <span class="reggeli">(*Reggeli az árban)</span>
+                <span class="szallas-nev">Szállás neve: Le meridien Cairo Airport <span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Ára: 67.500 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 <h4 id="indulas">2024.08.05 - 2024.08.06 (Luxor)</h4>
                 <p>
-                Szállás neve: Jolie Ville Hotel & Spa Kings Island Luxor<span class="stars">*****</span> <br>
-                Ára: 31.000 Ft <span class="reggeli">(*Reggeli az árban)</span>
+                <span class="szallas-nev">Szállás neve: Jolie Ville Hotel & Spa Kings Island Luxor<span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Ára: 31.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 <h4 id="indulas">2024.08.06 - 2024.08.07 (Aswan)</h4>
                 <p>
-                Szállás neve: Pyramisa Island Hotel Aswan<span class="stars">*****</span> <br>
-                Ára: 37.000 Ft <span class="reggeli">(*Reggeli az árban)</span>
+                <span class="szallas-nev">Szállás neve: Pyramisa Island Hotel Aswan<span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Ára: 37.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 
