--- a/kirandulas.html
+++ b/kirandulas.html
@@ -69,16 +69,16 @@
                 <div class="col-lg-4">
                     <span class="days">1. nap:</span> <br>
                     Szfinx, Szakkara & Memphis túra <br>
-                    ára: 22.000 Ft / fő<br>
+                    Ára: 22.000 Ft / fő<br>
                     Kairói Citadella<br>
-                    7700 Ft / fő<br>
+                    Ára: 7700 Ft / fő<br>
                 </div>
                 <div class="col-lg-4">
                     <span class="days">2. nap:</span> <br>
                     Egyptian Museum Of Antiquities<br>
-                    6000 Ft / fő<br>
+                    Ára: 6000 Ft / fő<br>
                     Khan el khalili<br>
-                    ára: 5000 Ft / fő<br>
+                    Ára: 5000 Ft / fő<br>
                 </div>
                 <div class="col-lg-4">
                     <span class="days">3. nap:</span> <br>
@@ -96,16 +96,16 @@
                 <div class="col-lg-4">
                     <span class="days">4. nap:</span> <br>
                     Szfinx, Szakkara & Memphis túra <br>
-                    ára: 22.000 Ft / fő<br>
+                    Ára: 22.000 Ft / fő<br>
                     Kairói Citadella<br>
-                    7700 Ft / fő<br>
+                    Ára: 7700 Ft / fő<br>
                 </div>
                 <div class="col-lg-4">
                     <span class="days">5. nap:</span> <br>
                     Egyptian Museum Of Antiquities<br>
-                    6000 Ft / fő<br>
+                    Ára: 6000 Ft / fő<br>
                     Khan el khalili<br>
-                    ára: 5000 Ft / fő<br>
+                    Ára: 5000 Ft / fő<br>
                 </div>
                 <div class="col-lg-4">
                     <span class="days">6. nap:</span> <br>
