--- a/kirandulas.html
+++ b/kirandulas.html
@@ -95,26 +95,25 @@
             <div class="row">
                 <div class="col-lg-4">
                     <span class="days">4. nap:</span> <br>
-                    Szfinx, Szakkara & Memphis túra <br>
-                    Ára: 22.000 Ft / fő<br>
-                    Kairói Citadella<br>
-                    Ára: 7700 Ft / fő<br>
+                    Abu Simbel Temple <br>
+                    Ára: 10.631 Ft / fő<br>
+                    <br>
+                    <br>
                 </div>
                 <div class="col-lg-4">
                     <span class="days">5. nap:</span> <br>
-                    Egyptian Museum Of Antiquities<br>
-                    Ára: 6000 Ft / fő<br>
-                    Khan el khalili<br>
-                    Ára: 5000 Ft / fő<br>
+                    "szabadfoglalkozás"<br>
+                    Városnézés<br>
+                    
                 </div>
                 <div class="col-lg-4">
                     <span class="days">6. nap:</span> <br>
-                    Luxor Királyok Völgye egész napos kirándulás:<br>
+                    Egész napos Törtéánelmi Alexandria túra:<br>
                     <ul>
-                        <li>Valley of the Kings</li>
-                        <li>Karnaki templom</li>
-                        <li>Colossi of memnon</li>
-                        <li>Luxori Templom</li>
+                        <li>Kom El Shoqafa Catacombs</li>
+                        <li>Roman triclinium</li>
+                        <li>Pompey's Pillar</li>
+                        <li>Citadel of Qaitbay</li>
                     </ul>
                 </div>
             </div>
