--- a/kirandulas.html
+++ b/kirandulas.html
@@ -57,6 +57,12 @@
                 <span class="szallas-nev">Ára: 37.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
+                <h4 id="indulas">2024.08.08 - 2024.08.09 (Cairo)</h4>
+                <p>
+                <span class="szallas-nev">Szállás neve: Calma LUXURY Rooms<span class="stars"> ****</span> <br></span>
+                <span class="szallas-nev">Ára: 67.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
+                        </p>
+                        <p>
                 </div>
         </div>
     </div>
