--- a/kirandulas.html
+++ b/kirandulas.html
@@ -41,26 +41,27 @@
             <div id="szallas">
                 <h4 id="indulas">2024.08.04 - 2024.08.05 (Cairó)</h4>
                 <p>
-                <span class="szallas-nev">Szállás neve: Le meridien Cairo Airport <span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Szállás neve: <a href="https://www.booking.com/hotel/eg/le-meridien-cairo-airport.hu.html"> Le meridien Cairo Airport</a> <span class="stars"> *****</span> <br></span>
                 <span class="szallas-nev">Ára: 67.500 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 <h4 id="indulas">2024.08.05 - 2024.08.06 (Luxor)</h4>
                 <p>
-                <span class="szallas-nev">Szállás neve: Jolie Ville Hotel & Spa Kings Island Luxor<span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Szállás neve: <a href="https://www.booking.com/hotel/eg/jolie-ville-kings-island-luxor.hu.html"> Jolie Ville Hotel & Spa Kings Island Luxor</a><span class="stars"> *****</span> <br></span>
                 <span class="szallas-nev">Ára: 31.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 <h4 id="indulas">2024.08.06 - 2024.08.07 (Aswan)</h4>
                 <p>
-                <span class="szallas-nev">Szállás neve: Pyramisa Island Hotel Aswan<span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Szállás neve: <a href="https://www.booking.com/hotel/eg/lti-pyramisa-isis-island-aswan.en-gb.html?aid=318615&label=New_English_EN_HU_26767330345-iELNg0bAp3N_IdTKmlw24AS634117823748%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atidsa-64415224945%3Alp9107634%3Ali%3Adec%3Adm%3Aag26767330345%3Acmp394949305&sid=b540a06affc83292b10012929bdadb5a&age=0;all_sr_blocks=1603005_201862224_0_41_0;checkin=2024-06-08;checkout=2024-06-09;dest_id=-291535;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;highlighted_blocks=1603005_201862224_0_41_0;hpos=1;matching_block_id=1603005_201862224_0_41_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=1603005_201862224_0_41_0__10272;srepoch=1712151684;srpvid=a5a1603f793c0214;type=total;ucfs=1&#hotelTmpl"> Pyramisa Island Hotel Aswan</a><span class="stars"> *****</span> <br></span>
                 <span class="szallas-nev">Ára: 37.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 <h4 id="indulas">2024.08.08 - 2024.08.09 (Cairo)</h4>
                 <p>
-                <span class="szallas-nev">Szállás neve: Calma LUXURY Rooms<span class="stars"> ****</span> <br></span>
-                <span class="szallas-nev">Ára: 67.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
+                <span class="szallas-nev">  Szállás neve:<a href="https://www.booking.com/hotel/eg/al-masa-and-spa.hu.html?aid=2311236&label=hu-hu-booking-desktop-YztO0B3xXl2MagfZOWTzvgS652796013597%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-334108349%3Alp9107634%3Ali%3Adec%3Adm&sid=b540a06affc83292b10012929bdadb5a&all_sr_blocks=0_0_2_0_0&checkin=2024-06-08&checkout=2024-06-09&dest_id=-290692&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=7&highlighted_blocks=0_0_2_0_0&hpos=7&matching_block_id=0_0_2_0_0&nflt=class%3D4%3Bclass%3D5%3Bprice%3DHUF-min-110000-1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=class&sr_pri_blocks=0_0_2_0_0__10545&srepoch=1712151451&srpvid=888f5f7a94f80067&type=total&ucfs=1&activeTab=main"> Al Masa Hotel Nasr City</a><span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Ára: 38.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
+                
                         </p>
                         <p>
                 </div>
