--- a/kirandulas.html
+++ b/kirandulas.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 heading">
-                <h1>Egyiptom</h1>
+                <h1> <a href="index.html">Egyiptom</a></h1>
             </div>
         </div>
        <div class="row">
