--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     <div class="container">
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+          <li class="nav-item"><a href="https://hu.wikipedia.org/wiki/%C3%93kori_Egyiptom" class="nav-link px-2 text-muted">Wikipédia</a></li>
+          <li class="nav-item"><a href="https://helloegyiptom.wixsite.com/helloegyiptom/post/20-furcsa-dolog-az-%C3%B3kori-egyiptomiakr%C3%B3l" class="nav-link px-2 text-muted">HelloEgyiptom</a></li>
+          <li class="nav-item"><a href="https://www.youtube.com/watch?v=d98u4k0NDJI&t=101s&ab_channel=T%C3%ADzesLista" class="nav-link px-2 text-muted">Youtube</a></li>
+          <li class="nav-item"><a href="https://m.mult-kor.hu/20130424_het_erdekesseg_az_okori_egyiptombol?pIdx=1" class="nav-link px-2 text-muted">Múlktkor</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
         </ul>
-        <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+        <p class="text-center ">&copy; 2024 Polyák Bálint, Regián Gergely</p>
       </footer>
     </div>
     <script>
