--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <li class="nav-item"><a href="https://helloegyiptom.wixsite.com/helloegyiptom/post/20-furcsa-dolog-az-%C3%B3kori-egyiptomiakr%C3%B3l" class="nav-link px-2 text-muted">HelloEgyiptom</a></li>
           <li class="nav-item"><a href="https://www.youtube.com/watch?v=d98u4k0NDJI&t=101s&ab_channel=T%C3%ADzesLista" class="nav-link px-2 text-muted">Youtube</a></li>
           <li class="nav-item"><a href="https://m.mult-kor.hu/20130424_het_erdekesseg_az_okori_egyiptombol?pIdx=1" class="nav-link px-2 text-muted">Múlktkor</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Egyiptom</a></li>
         </ul>
         <p class="text-center ">&copy; 2024 Polyák Bálint, Regián Gergely</p>
       </footer>
