--- a/kirandulas.html
+++ b/kirandulas.html
@@ -31,7 +31,7 @@
                 Indulás <b>Cairóból:</b> 03:30 <br>
                 Érkezés <b>Cairóba:</b> 06:00</p>    
             </div>
-            <img src="kepek/repjegy.png" alt="" class="img-fluid repjegy-kep">
+            <img src="kepek/repjegy.png" alt="repjegy" class="img-fluid repjegy-kep" title="repjegyek">
         </p>
 
         </div>
@@ -41,8 +41,8 @@
             <div id="szallas">
                 <h4 id="indulas">2024.08.04 - 2024.08.05 (Cairó)</h4>
                 <p>
-                <span class="szallas-nev">Szállás neve: <a href="https://www.booking.com/hotel/eg/le-meridien-cairo-airport.hu.html"> Le meridien Cairo Airport</a> <span class="stars"> *****</span> <br></span>
-                <span class="szallas-nev">Ára: 67.500 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
+                <span class="szallas-nev">Szállás neve: <a href="https://www.booking.com/hotel/eg/great-pyramid-inn.hu.html?aid=319854&label=great-pyramid-inn-WN6SSMXThIdzniN13SkHfAS438068517082%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-122738955926%3Alp9107634%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YavywThF4buZMwppv9IhQn0&sid=b540a06affc83292b10012929bdadb5a&age=0&all_sr_blocks=152563711_295793783_2_1_0&checkin=2024-06-08&checkout=2024-06-09&dest_id=-290692&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&highlighted_blocks=152563711_295793783_2_1_0&hpos=1&matching_block_id=152563711_295793783_2_1_0&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&sr_pri_blocks=152563711_295793783_2_1_0__7642&srepoch=1712154258&srpvid=5dbb6545374200bb&type=total&ucfs=1&activeTab=main"> Great Pyramid Inn</a> <span class="stars"> *****</span> <br></span>
+                <span class="szallas-nev">Ára: 28.000 Ft <span class="reggeli">(*Reggeli az árban)</span></span>
                         </p>
                         <p>
                 <h4 id="indulas">2024.08.05 - 2024.08.06 (Luxor)</h4>
