--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" alt="...">
+                        <img src="kepek/egyiptom-altalanos.jpg" class="d-block w-100 slideshow" title="piramisok" alt="piramisok">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/slideshhow1.jpg" class="d-block w-100 slideshow" alt="...">
+                        <img src="kepek/slideshhow1.jpg" class="d-block w-100 slideshow" title="piramisok" title="piramisok">
                       </div>
                       <div class="carousel-item">
-                        <img src="kepek/slideshow2.jpg" class="d-block w-100 slideshow" alt="...">
+                        <img src="kepek/slideshow2.jpg" class="d-block w-100 slideshow" title="sphinx" title="sphinx">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -79,21 +79,21 @@
                 <p class="text active" id="text1">Korai dinasztikus időszak (i. e. 3150–2686)
                   Fő cikk: Korai dinasztikus időszak (Egyiptom)
                   A korai dinasztikus időszak hozzávetőlegesen a korai mezopotámiai sumér - akkád civilizáció és az ősi Elam korabeli volt . Az időszámításunk előtti harmadik században élt egyiptomi pap, Manetho a királyok hosszú sorát Menestől saját koráig 30 dinasztiába csoportosította, ez a rendszer ma is használatos. Hivatalos történelmét a "Meni" (vagy görögül Menes) nevű királlyal kezdte, akiről azt hitték, hogy egyesítette Felső- és Alsó-Egyiptom két királyságát .
-                <img src="kepek/okori egziptom.jpg" class="img-fluid okor"></p>
+                <img src="kepek/okori egziptom.jpg" class="img-fluid okor" alt="Valley of the kings" title="Valley of the kings"></p>
                 <p class="text" id="text2">Hafré piramisa
                   A terület viszonylagos elszigeteltsége és a Nílus évenkénti áradásai következtében a Nílus völgyében alakult ki az ókori Egyiptom, az ókor egyik legfejlettebb civilizációja, miután Ménész (Mina) I. e. 3000 körül egyesítette Alsó- és Felső-Egyiptomot. A birodalom mintegy háromezer évig állt fenn; a XXX. dinasztia hatalmát a perzsák döntötték meg I. e. 342-ben, így rövid függetlenedést követően az I. e. 525-ben már meghódított Egyiptom ismét az Óperzsa Birodalom része lett. A folyton lázongó tartományt I. e. 332-ben foglalták el Nagy Sándor csapatai, majd halála után egyik hadvezére, I. Ptolemaiosz vezetésével ismét függetlenedett.
-                  <img src="kepek/egyiptom2-scaled.jpg" class="img-fluid okor"></p>
+                  <img src="kepek/egyiptom2-scaled.jpg" class="img-fluid okor" alt="Abu Simbel Temple" title="Abu Simbel Temple"></p>
                   
                 <p class="text" id="text3">Egyiptom a 7. század közepén a iszlám zászlaja alatt egyesült arabok hódításának esett áldozatul. Miután az Újperzsa Birodalommal folytatott, mintegy ötvenéves háborúskodás során kimerült császárság 636-ban döntő vereséget szenvedett az eltökélt araboktól a jarmúki csatában, Szíria és Palesztina után Egyiptom is elesett. 641-ben a bizánciak vereséget szenvedtek a babilóni csatában Amr ibn al-Ász hadaitól, és a tartomány evakuálása mellett döntöttek. A szeptember 12-én elhagyott Alexandriát a Kürosz pátriárka által aláírt szerződésben vállaltak értelmében az arabok szeptember 29-én bevonultak a városba.
-                  <img src="kepek/kozepkoriegyiptom.jpg" class="img-fluid okor">
+                  <img src="kepek/kozepkoriegyiptom.jpg" class="img-fluid okor" alt="Falrajzok" title="Falrajzok">
                 </p>
                 <p class="text" id="text4">
                   Az újkori Egyiptom történelmi periódusa az ókori Egyiptom után következik, a modern időkig tart. Általában az 1517-es oszmán-török hódítástól kezdik számolni, amikor is Egyiptom a török birodalom részévé vált, és ez a közel-keleti régió sok tekintetben az oszmán befolyás alá került. Az újkori Egyiptom számos fontos politikai és társadalmi változáson ment keresztül, többek között a francia és az angol befolyás észlelhető a területen.
-                  <img src="kepek/ujkori.jpeg" class="img-fluid okor"></p>
+                  <img src="kepek/ujkori.jpeg" class="img-fluid okor" class="img-fluid okor" alt="Deir el-Bahari" title="Deir el-Bahari"></p>
                 <p class="text" id="text5">Jelenkori Egyiptom az ország történelmének és kultúrájának fontos része, amely sokféle politikai és társadalmi dinamikát tartalmaz. Az 1952-es egyiptomi forradalom és az azt követő események jelentősen formálták az ország jelenlegi politikai és társadalmi környezetét.
 
                   Az egyik legfontosabb esemény az 1952-es egyiptomi forradalom volt, amelynek során az Egyiptomi Szabad Tisztek Mozgalma (Free Officers Movement) vette át az uralmat az országban. Ennek eredményeként az uralkodói rendszer megszűnt, és az ország republikánus állammá vált.
-                  <img src="kepek/jelenegziptom.jpg" class="img-fluid okor"></p>
+                  <img src="kepek/jelenegziptom.jpg" class="img-fluid okor" class="img-fluid okor" alt="piramisok,sphinx" title="piramisok,sphinx"></p>
               </div>
             </div>
         </div>
