--- a/kirandulas.html
+++ b/kirandulas.html
@@ -130,9 +130,18 @@
                 <h1>Egyéb tudnivalók</h1>
                 <hr>
             </div>
-            Uber Ára: 
-
-
+            1 EGP = 8 Ft <br>
+            Uber:<br>
+            <div class="col-lg-4">
+                
+                
+                <ul>
+                    <li>Kom El Shoqafa Catacombs</li>
+                    <li>Roman triclinium</li>
+                    <li>Pompey's Pillar</li>
+                    <li>Citadel of Qaitbay</li>
+                </ul>
+            </div>
             Taxi Ára:
 
 
