--- a/kirandulas.html
+++ b/kirandulas.html
@@ -162,7 +162,7 @@
             
         </div>
         <div class="col-lg-6">
-            <img src="kepek/uber.png" alt="">
+            <img src="kepek/uber.png" alt="Uber" title="Uber" class="uber-kep img-fluid">
         </div>
     </div>
             
