--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 heading">
-                <h1 >Egyiptom</h1>
+                <h1 >Egyiptom2</h1>
             </div>
         </div>
         <div class="row">
